<resources>
    <string name="app_name">Characters Rick and Morty</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="loading">Loading...</string>

    <!-- El %sy %dson son Marcadores de posicion
    android:text="@{@string/quote_format(gameViewModel.word)}"
    -->

    <string name="quote_format">\"%s\"</string>
    <string name="name_format">Name:\n %s</string>
    <string name="status_format">Status: %s</string>
    <string name="species_format">Species:\n %s</string>
    <string name="gender_format">Gender: %s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="henry_rojas">App developed by: Henry Rojas</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lorem quam, laoreet scelerisque egestas ornare Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lorem quam, laoreet scelerisque egestas ornare</string>
    <string name="dont_have_a_favorite">You don\'t have a favorite yet</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="list_of_episodes">List of episodes</string>
    <string name="architecture_libraries">Architecture/Libraries</string>
    <string name="copyright">Copyright</string>
    <string name="go_to_api_documentation">Go to Api Documentation</string>
    <string name="floating_add_remove_favorite_character">Floating add/remove favorite character</string>

    <string name="em_get_character">Error when accessing the character</string>
</resources>