<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/cardv_view_margin"
    app:cardCornerRadius="@dimen/cardview_default_elevation"
    android:layout_width="match_parent"
    android:layout_height="@dimen/character_image">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_home_avatar"
            android:layout_width="@dimen/character_image"
            android:layout_height="@dimen/character_image"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_home_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/status" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_home_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/species" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_home_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/gender" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>