<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.henryjhavierdev.rickandmorty.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favoriteCharacter"
        android:name="com.henryjhavierdev.rickandmorty.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    
    <fragment
        android:id="@+id/navigation_aboutFragment"
        android:name="com.henryjhavierdev.rickandmorty.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <dialog
        android:id="@+id/characterDetailFragment"
        android:name="com.henryjhavierdev.rickandmorty.ui.character.CharacterDetailDialogFragment"
        android:label="fragment_character_detail"
        tools:layout="@layout/fragment_character_detail">
        <argument
            android:name="character"
            app:argType="com.henryjhavierdev.rickandmorty.model.CharacterResultRs"/>
    </dialog>


</navigation>