<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="positionExample"
            type="Integer" />
        <variable
            name="viewModelExample"
            type="com.henryjhavierdev.rickandmorty.viewmodel.NotificationsViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/cardv_view_margin"
        app:cardCornerRadius="@dimen/cardview_default_elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_home_avatar"
                app:imageFromUrl="@{viewModelExample.getCharacter(positionExample).image}"
                android:layout_width="@dimen/character_image"
                android:layout_height="@dimen/character_image"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_name"
                    android:text="@{@string/name_format(viewModelExample.getCharacter(positionExample).name)}"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/cardv_view_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_status"
                    android:text="@{@string/status_format(viewModelExample.getCharacter(positionExample).status)}"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/cardv_view_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_species"
                    android:text="@{@string/species_format(viewModelExample.getCharacter(positionExample).species)}"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/cardv_view_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/species" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_home_gender"
                    android:text="@{@string/species_format(viewModelExample.getCharacter(positionExample).gender)}"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/cardv_view_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
</layout>